; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_fuzzershell.c_sqlEvalFunc.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_fuzzershell.c_sqlEvalFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.EvalResult = type { i8*, i32, i8*, i64 }

@.str = private unnamed_addr constant [2 x i8] c" \00", align 1
@callback = common dso_local global i32 0, align 4
@SQLITE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32**)* @sqlEvalFunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sqlEvalFunc(i32* %0, i32 %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.EvalResult, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32** %2, i32*** %6, align 8
  store i8* null, i8** %9, align 8
  %12 = call i32 @memset(%struct.EvalResult* %11, i32 0, i32 32)
  %13 = getelementptr inbounds %struct.EvalResult, %struct.EvalResult* %11, i32 0, i32 0
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %13, align 8
  %14 = load i32**, i32*** %6, align 8
  %15 = getelementptr inbounds i32*, i32** %14, i64 0
  %16 = load i32*, i32** %15, align 8
  %17 = call i64 @sqlite3_value_text(i32* %16)
  %18 = inttoptr i64 %17 to i8*
  store i8* %18, i8** %7, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = icmp eq i8* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %3
  br label %77

22:                                               ; preds = %3
  %23 = load i32, i32* %5, align 4
  %24 = icmp sgt i32 %23, 1
  br i1 %24, label %25, label %37

25:                                               ; preds = %22
  %26 = load i32**, i32*** %6, align 8
  %27 = getelementptr inbounds i32*, i32** %26, i64 1
  %28 = load i32*, i32** %27, align 8
  %29 = call i64 @sqlite3_value_text(i32* %28)
  %30 = inttoptr i64 %29 to i8*
  %31 = getelementptr inbounds %struct.EvalResult, %struct.EvalResult* %11, i32 0, i32 0
  store i8* %30, i8** %31, align 8
  %32 = getelementptr inbounds %struct.EvalResult, %struct.EvalResult* %11, i32 0, i32 0
  %33 = load i8*, i8** %32, align 8
  %34 = icmp eq i8* %33, null
  br i1 %34, label %35, label %36

35:                                               ; preds = %25
  br label %77

36:                                               ; preds = %25
  br label %37

37:                                               ; preds = %36, %22
  %38 = getelementptr inbounds %struct.EvalResult, %struct.EvalResult* %11, i32 0, i32 0
  %39 = load i8*, i8** %38, align 8
  %40 = call i64 @strlen(i8* %39)
  %41 = trunc i64 %40 to i32
  %42 = getelementptr inbounds %struct.EvalResult, %struct.EvalResult* %11, i32 0, i32 1
  store i32 %41, i32* %42, align 8
  %43 = load i32*, i32** %4, align 8
  %44 = call i32* @sqlite3_context_db_handle(i32* %43)
  store i32* %44, i32** %8, align 8
  %45 = load i32*, i32** %8, align 8
  %46 = load i8*, i8** %7, align 8
  %47 = load i32, i32* @callback, align 4
  %48 = call i32 @sqlite3_exec(i32* %45, i8* %46, i32 %47, %struct.EvalResult* %11, i8** %9)
  store i32 %48, i32* %10, align 4
  %49 = load i32, i32* %10, align 4
  %50 = load i32, i32* @SQLITE_OK, align 4
  %51 = icmp ne i32 %49, %50
  br i1 %51, label %52, label %58

52:                                               ; preds = %37
  %53 = load i32*, i32** %4, align 8
  %54 = load i8*, i8** %9, align 8
  %55 = call i32 @sqlite3_result_error(i32* %53, i8* %54, i32 -1)
  %56 = load i8*, i8** %9, align 8
  %57 = call i32 @sqlite3_free(i8* %56)
  br label %77

58:                                               ; preds = %37
  %59 = getelementptr inbounds %struct.EvalResult, %struct.EvalResult* %11, i32 0, i32 0
  %60 = load i8*, i8** %59, align 8
  %61 = icmp eq i8* %60, null
  br i1 %61, label %62, label %68

62:                                               ; preds = %58
  %63 = load i32*, i32** %4, align 8
  %64 = call i32 @sqlite3_result_error_nomem(i32* %63)
  %65 = getelementptr inbounds %struct.EvalResult, %struct.EvalResult* %11, i32 0, i32 2
  %66 = load i8*, i8** %65, align 8
  %67 = call i32 @sqlite3_free(i8* %66)
  br label %76

68:                                               ; preds = %58
  %69 = load i32*, i32** %4, align 8
  %70 = getelementptr inbounds %struct.EvalResult, %struct.EvalResult* %11, i32 0, i32 2
  %71 = load i8*, i8** %70, align 8
  %72 = getelementptr inbounds %struct.EvalResult, %struct.EvalResult* %11, i32 0, i32 3
  %73 = load i64, i64* %72, align 8
  %74 = trunc i64 %73 to i32
  %75 = call i32 @sqlite3_result_text(i32* %69, i8* %71, i32 %74, i32 (i8*)* @sqlite3_free)
  br label %76

76:                                               ; preds = %68, %62
  br label %77

77:                                               ; preds = %21, %35, %76, %52
  ret void
}

declare dso_local i32 @memset(%struct.EvalResult*, i32, i32) #1

declare dso_local i64 @sqlite3_value_text(i32*) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32* @sqlite3_context_db_handle(i32*) #1

declare dso_local i32 @sqlite3_exec(i32*, i8*, i32, %struct.EvalResult*, i8**) #1

declare dso_local i32 @sqlite3_result_error(i32*, i8*, i32) #1

declare dso_local i32 @sqlite3_free(i8*) #1

declare dso_local i32 @sqlite3_result_error_nomem(i32*) #1

declare dso_local i32 @sqlite3_result_text(i32*, i8*, i32, i32 (i8*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
